<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Property Guardian</string>
    <string name="title_activity_new_item">New item</string>
    <string name="title_activity_item_details">Item details</string>
    <string name="title_activity_barcode_scanner">Scan QR code</string>

    <string-array name="tab_names">
        <item>My items</item>
        <item>basic actions</item>
        <item>Borrowed items</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="action_new_item">New item</string>
    <string name="action_remove">remove item</string>
    <string name="hint_name">Name</string>
    <string name="button_save_to_tag">Save to Tag</string>
    <string name="button_generate_qr">Generate QRCode</string>
    <string name="button_new_item">Add new item</string>
    <string name="button_scan_rfid">Scan RFID tag</string>
    <string name="button_can_qr">Scan QR code</string>
    <string name="button_login">Sign in / Register</string>
    <string name="not_signed_in"></string>
    <string name="hint_email">e-mail</string>
    <string name="login_dialog_title">New user</string>
    <string name="button_sign_in">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="logged_as">User name: %1$s</string>
    <string name="category_book">Book</string>
    <string name="category_movie">Movie</string>
    <string name="category_boardgame">Board game</string>
    <string name="category_other">Other</string>
    <string name="status_free">Free</string>
    <string name="status_in_use">In use</string>
    <string name="label_owner">owner:</string>
    <string name="label_localization">held by:</string>
    <string name="button_borrow">Take this item</string>
    <string name="title_activity_nfc_scanner">Scan a tag...</string>
    <string name="scan_a_tag">Scan a tag...</string>
    <string name="title_activity_item_to_borrow">Scanned item</string>
    <string name="error_empty_item_name">Please enter item name</string>
    <string name="action_sync">Sync items</string>
    <string name="email_sent">Email with QR sent!</string>
    <string name="button_email_owner">Send email to owner</string>
    <string name="button_email_holder">Send email to holder</string>
    <string name="saving_item">to save %1$s</string>
    <string name="confirm_teg_replace_title">Replace item on tag</string>
    <string name="confirm_tag_replace_msg">On this tag there is an item. Override it?</string>
    <string name="error_when_saving_tag">Error occurred</string>
    <string name="item_saved_on_tag">Item has been saved on tag</string>
    <string name="wrong_tag_format">Wrong tag format</string>
    <string name="confirm_delete_dialog_title">Delete item</string>
    <string name="confirm_delete_dialog_message">Are you sure you want to delete this Item?</string>
    <string name="confirm_multiple_delete_dialog_title">Delete items</string>
    <string name="confirm_multiple_delete_dialog_message">Are you sure you want to delete this Items?</string>

</resources>
